# product-mgmt-assistant

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: database.py  endpoints.py  main.py  models.py
app/core/: config.py
app/services/: gemini.py  pipeline.py  trello.py  x.py
app/tasks/: workflow_tasks.py
app/utils/: mongo_utils.py
